@@ -13,7 +13,6 @@ Build-Depends:
  libexpat1-dev,
  libfcgi-dev,
  libgdal-dev (>= 1.11),
-#trusty# libgsl0-dev,
 #sid stretch xenial yakkety# libgsl-dev,
  libgeos-dev (>= 3.0.0),
  libpq-dev,
@@ -43,8 +42,7 @@ Build-Depends:
  locales, ca-certificates, ninja-build
 Build-Conflicts: libqgis-dev, qgis-dev
 #sid stretch xenial yakkety#Standards-Version: 3.9.7
-#trusty#Standards-Version: 3.8.4
-#trusty xenial yakkety#XS-Python-Version: current
+#xenial yakkety#XS-Python-Version: current
 Vcs-Browser: https://github.com/qgis/QGIS/
 Vcs-Git: https://github.com/qgis/QGIS.git
 Homepage: http://qgis.org/
@@ -202,7 +200,6 @@ Depends:
  libexpat1-dev,
  libgdal-dev (>= 1.11),
  libgeos-dev (>= 3.0.0),
-#trusty# libgsl0-dev,
 #sid stretch xenial yakkety# libgsl-dev,
  libpq-dev,
  libproj-dev,
