@@ -77,13 +77,13 @@ label{  background-color: #FFFFCC;
 <DIV CLASS="header" ID="header">
 <H1>QGIS</H1>
 <H2>Building QGIS from source - step by step</H2>
-<H3>Tuesday October 25, 2016</H3>
+<H3>Monday November 07, 2016</H3>
 </DIV>
 
 <DIV CLASS="body" ID="body">
 <P>
-Last Updated: Tuesday October 25, 2016
-Last Change : Monday October 24, 2016
+Last Updated: Monday November 07, 2016
+Last Change : Monday November 07, 2016
 </P>
 <DIV CLASS="toc">
 
@@ -310,10 +310,6 @@ sudo apt-get update
 <TR>
 <TH>Distribution</TH>
 <TH>install command for packages</TH>
-</TR>
-<TR>
-<TD>trusty</TD>
-<TD><CODE>apt-get install bison ca-certificates cmake dh-python doxygen flex gdal-bin git graphviz grass-dev libexpat1-dev libfcgi-dev libgdal-dev libgeos-dev libgsl0-dev libpq-dev libproj-dev libqca-qt5-2-dev libqca-qt5-2-plugins libqt5opengl5-dev libqt5scintilla2-dev libqt5sql5-sqlite libqt5svg5-dev libqt5webkit5-dev libqt5xmlpatterns5-dev libqwt-qt5-dev libspatialindex-dev libspatialite-dev libsqlite3-dev lighttpd locales ninja-build pkg-config poppler-utils pyqt5-dev pyqt5-dev-tools pyqt5.qsci-dev python3-all-dev python3-dev python3-future python3-gdal python3-mock python3-nose2 python3-psycopg2 python3-pyqt5 python3-pyqt5.qsci python3-pyqt5.qtsql python3-pyqt5.qtsvg python3-sip python3-sip-dev python3-termcolor python3-yaml qtbase5-dev qtpositioning5-dev qtscript5-dev qttools5-dev qttools5-dev-tools spawn-fcgi txt2tags xauth xfonts-100dpi xfonts-75dpi xfonts-base xfonts-scalable xvfb cmake-curses-gui</CODE></TD>
 </TR>
 <TR>
 <TD>stretch</TD>
@@ -563,24 +559,29 @@ If you want to use `ccmake` or other interactive tools, run the following
 command in the empty build directory once before starting to use the
 interactive tools.
 </P>
+
 <div class="code"><PRE>
 cmake
 </PRE></div>
-<P></P>
+
 <P>
 If everything went ok you can finally start to compile. (As usual append a -jX where X is the number of available cores option to make to speed up your build process)
 </P>
+
 <div class="code"><PRE>
 make
 </PRE></div>
-<P></P>
+
 <A NAME="toc14"></A>
 <H2>3.11. On Fedora Linux</H2>
+
 <P>
 We assume that you have the source code of QGIS ready and created a
 new subdirectory called `build` or `build-qt5` in it.
 </P>
+
 <H3>3.11.1. Install build dependencies</H3>
+
 <div class="code"><PRE>
 dnf install qt5-qtwebkit-devel qt5-qtlocation-devel qt5-qttools-static
 qt5-qtscript-devel qca-qt5-devel python3-qt5-devel python3-qscintilla-qt5-devel 
@@ -590,14 +591,15 @@ qt5-qtsvg-devel qt5-qtxmlpatterns-devel spatialindex-devel expat-devel proj-deve
 qwt-qt5-devel gsl-devel postgresql-devel cmake python3-future gdal-python3
 python3-psycopg2 python3-PyYAML qca-qt5-ossl
 </PRE></div>
-<P></P>
+
 <P>
 To build QGIS server additional dependencies are required:
 </P>
+
 <div class="code"><PRE>
 dnf install fcgi-devel
 </PRE></div>
-<P></P>
+
 <P>
 Make sure that your build directory is completely empty when you enter the
 following command. Do never try to "re-use" an existing Qt4 build directory.
@@ -607,7 +609,7 @@ tools.
 </P>
 
 <div class="code"><PRE>
-cmake -DENABLE_QT5=ON -DWITH_QWTPOLAR=OFF ..
+cmake ..
 </PRE></div>
 
 <P>
