@@ -77,7 +77,7 @@ label{  background-color: #FFFFCC;
 <DIV CLASS="header" ID="header">
 <H1>QGIS News</H1>
 <H2>Change history for the QGIS Project</H2>
-<H3>Thursday October 06, 2016</H3>
+<H3>Monday November 07, 2016</H3>
 </DIV>
 
 <DIV CLASS="toc">
@@ -116,7 +116,7 @@ label{  background-color: #FFFFCC;
 </DIV>
 <DIV CLASS="body" ID="body">
 <P>
-Last Updated: Thursday October 06, 2016
+Last Updated: Monday November 07, 2016
 Last Change : Wednesday July 27, 2016
 </P>
 
