@@ -1,6 +1,6 @@
 QGIS News
 Change history for the QGIS Project
-Thursday October 06, 2016
+Monday November 07, 2016
 
 
 ------------------------------------------------------------------------
@@ -39,7 +39,7 @@ Thursday October 06, 2016
 ------------------------------------------------------------------------
 
 
-Last Updated: Thursday October 06, 2016
+Last Updated: Monday November 07, 2016
 Last Change : Wednesday July 27, 2016
 
 
